<resources>
    <string name="app_name">TicTacToe</string>
    <string name="xSymbol">X</string>
    <string name="oSymbol">O</string>
    <string name="player_1">Player 1</string>
    <string name="draw">Its a Draw!!!</string>
    <string name="player_2">Player 2</string>
    <string name="new_game">New Game</string>
    <string name="whoWon">Player %1$s won!!!</string>
    <string name="round">%1$s%2$s \nRound</string>
    <string name="playerToast">Hi Player %1$s!!!</string>
    <string name="todo">TODO</string>
    <string name="congratulations">Congratulations!</string>
    <string name="home">Home</string>
    <string name="you_won_the_match">You won the match</string>
    <string name="play_again">Play Again</string>
</resources>