<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultScreen">

    <ImageView
        android:id="@+id/winingStatus"
        android:layout_width="245dp"
        android:layout_height="207dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trophy"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/crown"
        android:layout_width="125dp"
        android:layout_height="111dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/winingStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/king"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:textColor="#F34336"
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        tools:text="Hi Player One!"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crown" />

    <TextView
        android:id="@+id/congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/congratulations"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/backToHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winingStatus" />

    <Button
        android:id="@+id/backToHome"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playAgain"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/play_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backToHome"
        app:layout_constraintTop_toTopOf="@+id/backToHome" />

    <TextView
        android:id="@+id/wonStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/you_won_the_match"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/congratulations"
        app:layout_constraintStart_toStartOf="@+id/congratulations"
        app:layout_constraintTop_toBottomOf="@+id/congratulations" />
</androidx.constraintlayout.widget.ConstraintLayout>